Add language mapping for zh_CN to zh_HANS
- Will allow i18n_tools to copy the zh_CN translations to zh_HANS in
preparation for the Django 1.11 upgrade.

--- a/conf/locale/config.yaml
+++ b/conf/locale/config.yaml
@@ -1,5 +1,8 @@
 # Configuration for i18n workflow.
 
+edx_lang_map:
+    zh_CN: zh_HANS
+
 locales:
     - en  # English - Source Language
     # - am  # Amharic
